--- a/src/css/style.css
+++ b/src/css/style.css
@@ -226,6 +226,7 @@ body .section .footer_logo {
   flex-direction: row;
   justify-content: space-between;
   width: 50%;
+  list-style: none;
 }
 body .section .footer_info {
   width: 50%;
@@ -307,6 +308,52 @@ body .section .animation_two {
   display: none;
 }
 
+@media only screen and (max-width: 1200px) {
+  .section {
+    padding: 20px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  body .section .main .right_content--text {
+    font-size: 34px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  body .section {
+    height: auto;
+  }
+  body .section .main {
+    flex-direction: column;
+  }
+  body .section .main .right_content {
+    padding-left: 0px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  body .section .header {
+    flex-direction: column;
+    margin: 0 auto;
+    height: auto;
+  }
+
+  body .section .main .bonus_effect--likes3 {
+    display: none;
+  }
+  body .section .main .bonus_effect--likes4 {
+    display: none;
+  }
+  body .section .main .bonus_effect--likes2 {
+    display: none;
+  }
+
+  body .section .main .bonus {
+    width: 100%;
+  }
+
+  body .section .animation_big {
+    top: 60%;
+  }
+}
 @media only screen and (max-width: 320px) {
   body {
     background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.19) 21%, rgba(0, 0, 0, 0) 100%), linear-gradient(to top, #000000 0%, rgba(0, 0, 0, 0) 45%), url(../img/bg_media_one.png) center no-repeat;
@@ -337,7 +384,7 @@ body .section .animation_two {
   body .section .main .bonus {
     margin-top: 0px;
     margin-bottom: 0px;
-    width: 100%;
+    width: 310px;
     height: 160px;
     background: url(../img/text_likes.png) no-repeat;
   }
